--- a/Avijit_Practice1.ipynb
+++ b/Avijit_Practice1.ipynb
@@ -49,6 +49,33 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "OdrVuk1QsNfl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5bcc9a39-f74d-4eb6-d7b9-8b87cabd5bfb"
+      },
+      "cell_type": "code",
+      "source": [
+        "i=3\n",
+        "j=78\n",
+        "print(i+j)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "81\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
