--- a/Avijit_Practice1.ipynb
+++ b/Avijit_Practice1.ipynb
@@ -56,22 +56,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         },
-        "outputId": "5bcc9a39-f74d-4eb6-d7b9-8b87cabd5bfb"
+        "outputId": "b51c3a34-e7b0-446d-9893-2aaca32223d3"
       },
       "cell_type": "code",
       "source": [
         "i=3\n",
         "j=78\n",
-        "print(i+j)"
+        "print(i+j)\n",
+        "print('Today is a sunny day')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "81\n"
+            "81\n",
+            "Today is a sunny day\n"
           ],
           "name": "stdout"
         }
