--- a/Avijit_Practice1.ipynb
+++ b/Avijit_Practice1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "9MNQiu10gDyq",
         "colab_type": "code",
-        "outputId": "7663ce5e-fee4-4d6d-cf91-c8d10e5f7ece",
+        "outputId": "44fb5cb7-087f-4299-dde9-00b7ee9751ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -39,7 +39,7 @@
         "s=\"Hello World\";\n",
         "print (s);"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "b51c3a34-e7b0-446d-9893-2aaca32223d3"
+        "outputId": "b6cc5ee0-1fd9-4122-c544-5a6d0cc7ccb6"
       },
       "cell_type": "code",
       "source": [
@@ -67,7 +67,7 @@
         "print(i+j)\n",
         "print('Today is a sunny day')"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,6 +78,29 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "Z8pbsYptz3tN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import Image\n",
+        "try:\n",
+        "  filename = take_photo()\n",
+        "  print('Saved to {}'.format(filename))\n",
+        "  \n",
+        "  # Show the image which was just taken.\n",
+        "  display(Image(filename))\n",
+        "except Exception as err:\n",
+        "  # Errors will be thrown if the user does not have a webcam or if they do not\n",
+        "  # grant the page permission to access it.\n",
+        "  print(str(err))"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
