--- a/Avijit_Practice1.ipynb
+++ b/Avijit_Practice1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "9MNQiu10gDyq",
         "colab_type": "code",
-        "outputId": "44fb5cb7-087f-4299-dde9-00b7ee9751ee",
+        "outputId": "30e861d8-ba44-411e-922f-7b7e6c77d77b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -39,7 +39,7 @@
         "s=\"Hello World\";\n",
         "print (s);"
       ],
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,11 +54,11 @@
       "metadata": {
         "id": "OdrVuk1QsNfl",
         "colab_type": "code",
+        "outputId": "decd2836-4724-44dc-b6c9-824906f5fbf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "b6cc5ee0-1fd9-4122-c544-5a6d0cc7ccb6"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -67,7 +67,7 @@
         "print(i+j)\n",
         "print('Today is a sunny day')"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,61 @@
     },
     {
       "metadata": {
-        "id": "Z8pbsYptz3tN",
+        "id": "oK_30NHa2KBQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import display, Javascript\n",
+        "from google.colab.output import eval_js\n",
+        "from base64 import b64decode\n",
+        "\n",
+        "def take_photo(filename='photo.jpg', quality=0.8):\n",
+        "  js = Javascript('''\n",
+        "    async function takePhoto(quality) {\n",
+        "      const div = document.createElement('div');\n",
+        "      const capture = document.createElement('button');\n",
+        "      capture.textContent = 'Capture';\n",
+        "      div.appendChild(capture);\n",
+        "\n",
+        "      const video = document.createElement('video');\n",
+        "      video.style.display = 'block';\n",
+        "      const stream = await navigator.mediaDevices.getUserMedia({video: true});\n",
+        "\n",
+        "      document.body.appendChild(div);\n",
+        "      div.appendChild(video);\n",
+        "      video.srcObject = stream;\n",
+        "      await video.play();\n",
+        "\n",
+        "      // Resize the output to fit the video element.\n",
+        "      google.colab.output.setIframeHeight(document.documentElement.scrollHeight, true);\n",
+        "\n",
+        "      // Wait for Capture to be clicked.\n",
+        "      await new Promise((resolve) => capture.onclick = resolve);\n",
+        "\n",
+        "      const canvas = document.createElement('canvas');\n",
+        "      canvas.width = video.videoWidth;\n",
+        "      canvas.height = video.videoHeight;\n",
+        "      canvas.getContext('2d').drawImage(video, 0, 0);\n",
+        "      stream.getVideoTracks()[0].stop();\n",
+        "      div.remove();\n",
+        "      return canvas.toDataURL('image/jpeg', quality);\n",
+        "    }\n",
+        "    ''')\n",
+        "  display(js)\n",
+        "  data = eval_js('takePhoto({})'.format(quality))\n",
+        "  binary = b64decode(data.split(',')[1])\n",
+        "  with open(filename, 'wb') as f:\n",
+        "    f.write(binary)\n",
+        "  return filename"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "uPqgT8v32KAw",
         "colab_type": "code",
         "colab": {}
       },
@@ -98,6 +152,19 @@
         "  # Errors will be thrown if the user does not have a webcam or if they do not\n",
         "  # grant the page permission to access it.\n",
         "  print(str(err))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "wvZlO7MN2Ws4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
