--- a/Avijit_Practice1.ipynb
+++ b/Avijit_Practice1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "9MNQiu10gDyq",
         "colab_type": "code",
-        "outputId": "30e861d8-ba44-411e-922f-7b7e6c77d77b",
+        "outputId": "f6aeab4d-3c73-456a-cdce-3fd671bff59e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -39,7 +39,7 @@
         "s=\"Hello World\";\n",
         "print (s);"
       ],
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "OdrVuk1QsNfl",
         "colab_type": "code",
-        "outputId": "decd2836-4724-44dc-b6c9-824906f5fbf2",
+        "outputId": "dcbf030a-f272-42c0-b602-47dd3ca6d41f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -67,7 +67,7 @@
         "print(i+j)\n",
         "print('Today is a sunny day')"
       ],
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,39 +135,28 @@
     },
     {
       "metadata": {
-        "id": "uPqgT8v32KAw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "from IPython.display import Image\n",
-        "try:\n",
-        "  filename = take_photo()\n",
-        "  print('Saved to {}'.format(filename))\n",
-        "  \n",
-        "  # Show the image which was just taken.\n",
-        "  display(Image(filename))\n",
-        "except Exception as err:\n",
-        "  # Errors will be thrown if the user does not have a webcam or if they do not\n",
-        "  # grant the page permission to access it.\n",
-        "  print(str(err))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "wvZlO7MN2Ws4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "472f8f2a-507e-4c74-bef1-39ee4823bd53"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "print(\"what is machine learning ? Let's try to figure out\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "what is machine learning ? Let's try to figure out\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
